Fix pill wrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -633,6 +633,7 @@ footer {
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 16px;
         .pill {
           border-radius: 24px;
